<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    tools:ignore="ContentDescription">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffff"
        android:hint="@string/username"
        android:autofillHints="Username"
        tools:ignore="TextFields,UnusedAttribute" />
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:hint="@string/password"
        android:autofillHints="Password"
        tools:ignore="TextFields,UnusedAttribute" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffff"
            android:text="@string/not_registered"/>
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:text="@string/register"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

</LinearLayout>